Terminando o corpo da página e adicionando footer

--- a/index.html
+++ b/index.html
@@ -10,23 +10,55 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light margin">
         <a src="navbar-brand" href="#">
             <img src="img/GL.png" width="220" height="80">
         </a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#">Quem somos</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Parceiros</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Serviços</a></li>
+                <li class="nav-item"><a class="nav-link" href="#quemsomos">Quem somos</a></li>
+                <li class="nav-item"><a class="nav-link" href="#parceiros">Parceiros</a></li>
+                <li class="nav-item"><a class="nav-link" href="#servicos">Serviços</a></li>
             </ul>
         </div>
     </nav>
-    <section class="quem-somos">
+    <section id="quem-somos">
         <div class="container-fluid quem-somos text-center margin">
-            <p>Teste</p>
+            <h3 class="margin">Quem somos</h3>
+            <img src="img/time.jpeg" class="rounded-circle" width="400" height="400">
+            <h3 class="h3">Somos um time comprometido com os resultados</h3>
         </div>
     </section>
+    <section id="parceiros">
+        <div class="container-fluid text-center margin parceiros">
+            <h3 class="margin">PARCEIROS</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4"><img src="img/digital.png" width="100%"></div>
+                    <div class="col-md-4"><img src="img/digital.png" width="100%"></div>
+                    <div class="col-md-4"><img src="img/digital.png" width="100%"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="servicos">
+        <div class="container-fluid text-center margin servicos">
+            <h3 class="margin">SERVIÇOS</h3>
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="p">Através do desenvolvimento de aplicativos, inúmeras soluções foram criadas com o intuito de facilitar a vida dos usuários. A “uberização” dos serviços contribuiu para um processo em que se tornou cada vez mais comum.</p>
+                    <img src="img/app.jpeg" width="100%" height="430">
+                </div>
+                <div class="col-md-6">
+                    <p class="p">Com isso, o mercado de aplicativos de serviços evoluiu muito nos últimos tempos. Atualmente podemos nos locomover, fazer pedidos em restaurantes, agendar hospedagem e até marcar consultas médicas através de aplicativos.</p>
+                    <img src="img/site.jpeg" width="100%" height="430">
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="container-fluid text-center margin footer">
+        <p>Desenvolvido por Wendel Roberta</p>
+    </footer>
 
 </body>
 
